rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__default-inserted-folder__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
  children: []
